ELS Code/main/default/objects/Membership_Revenue__c/Membership_Revenue__c.object-meta.xml
<CustomObject>
    <label>Membership Revenue</label>
    <nameField>
        <displayFormat>MR-{00000000}</displayFormat>
        <label>Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Membership Revenues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>