ELS Code/main/default/objects/Membership_Revenue__c/fields/Dues_Auto_Pay_c__c.field-meta.xml
<CustomField>
    <fullName>Dues_Auto_Pay_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dues Auto Pay</label>
    <type>Checkbox</type>
</CustomField>