ELS Code/main/default/objects/Membership_Revenue__c/fields/DUESPMTS__c.field-meta.xml
<CustomField>
    <fullName>DUESPMTS__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>