ELS Code/main/default/objects/Membership_Revenue__c/fields/Membership_ID__c.field-meta.xml
<CustomField>
    <fullName>Membership_ID__c</fullName>
    <label>Member ID</label>
    <referenceTo>Membership__c</referenceTo>
    <relationshipLabel>Membership Revenues</relationshipLabel>
    <relationshipName>Membership_Revenues</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>