ELS Code/main/default/objects/Membership_Revenue__c/fields/Year_Paid__c.field-meta.xml
<CustomField>
    <fullName>Year_Paid__c</fullName>
    <label>Year Paid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>